
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int CLONE_VM ;
 int P_PID ;
 int SIGCHLD ;
 int SYS_waitid ;
 int WEXITED ;
 int clone (int ,int *,int,int *) ;
 int exit (int) ;
 int just_exit ;
 int * new_stack ;
 int printf (char*) ;
 int syscall (int ,int ,int,...) ;

void write_5(unsigned long addr, unsigned long val) {


  long fake_info[20];

  if(val & 0xffffff) {
    printf("cannot write that val\n");
    exit(-1);
  }


  int i = 0;
  for(i = 3; i < 8; i++) {
    int to_write = (val >> (8*i)) & 0xff;
    while(1) {




      int pid = clone(just_exit, &new_stack[5000], CLONE_VM | SIGCHLD, ((void*)0));
      if (!pid) {
        exit(0);
      }
      if ((pid & 0xff) == to_write) {
        syscall(SYS_waitid, P_PID, pid, addr-16+i, WEXITED, ((void*)0));
        break;
      }
      else {
        syscall(SYS_waitid, P_PID, pid, fake_info, WEXITED, ((void*)0));
      }
    }
  }

}
